[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "excelflattener"
version = "0.2.0"
description = "A modular Python tool for flattening Excel workbooks into structured data, designed for AI agent integration"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openpyxl>=3.1.0",
    "pandas>=2.0.0"
]
authors = [
    {name = "Draftworx", email = "dev@draftworx.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]

[project.optional-dependencies]
ai = [
    "langchain>=0.1.0",
    "langchain-community>=0.0.20",
    "langsmith>=0.0.80"
]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0"
]

[project.scripts]
excel-flatten = "cli:main"

[project.urls]
Homepage = "https://github.com/draftworx/excelflattener"
Repository = "https://github.com/draftworx/excelflattener"
Issues = "https://github.com/draftworx/excelflattener/issues"

[tool.hatch.version]
path = "flattener/__init__.py"

[tool.black]
line-length = 100
target-version = ['py312']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
